# learning_opencv3_example_practice

ch16/: CMakeLists.txt  example_16_1.cpp
ch2/: CMakeLists.txt  example_2_1.cpp  example_2_10.cpp  example_2_11.cpp  example_2_3.cpp  example_2_4.cpp  example_2_5.cpp  example_2_6.cpp  example_2_7.cpp  new.avi  new_video.avi  open_cam.py  open_cam.py~  output.avi
